Change example in SearchWorksQueryRequest